commit al master del post ultima version

--- a/prueba.html
+++ b/prueba.html
@@ -8,11 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="container">
+        <div id="post">
+
+        
     <h1>
-        Aquí vamos a hacer un blog post
+        Aquí vamos a hacer un blog post y este es un cambio
     </h1>
     <p>
-        Y este es el parrafo de inicio
+        Y este es el parrafo de inicio y este es otro cambio
     </p>
+</div>
+</div>
 </body>
 </html>
