Estructura inicial de la cabecera

--- a/prueba.html
+++ b/prueba.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1>Cabecera</h1>
         <div id="post">
 
         
