agregado el contenido adicional del blog y mejor tipografia

--- a/prueba.html
+++ b/prueba.html
@@ -18,6 +18,7 @@
     <p>
         Y este es el parrafo de inicio y este es otro cambio
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, harum. Consectetur, nam autem! Dolorum expedita soluta beatae alias. Quia optio, distinctio debitis facere magnam earum explicabo excepturi aliquam aspernatur in?</p>
 </div>
 </div>
 </body>
