agregue suscripcion, cambie la cabecera y todo azul

--- a/prueba.html
+++ b/prueba.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Cabecera
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de maestro</span>
             </div>
         <div id="post">
 
@@ -23,6 +23,7 @@
         Y este es el parrafo de inicio y este es otro cambio
     </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, harum. Consectetur, nam autem! Dolorum expedita soluta beatae alias. Quia optio, distinctio debitis facere magnam earum explicabo excepturi aliquam aspernatur in?</p>
+<p>Suscribete y dale a like</p>
 </div>
 </div>
 </body>
