--- a/prueba.html
+++ b/prueba.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Cabecera
-            <span id="tagline">Tu blog de el main de otra persona</span>
+            <span id="tagline">Tu blog de el main</span>
             </div>
         <div id="post">
 
