una version de el blog ese

--- a/prueba.html
+++ b/prueba.html
@@ -17,7 +17,7 @@
 
         
     <h1>
-        Aquí vamos a hacer un blog post y este es un cambio
+        Jelou bienvenidos a tol mundo yeyeyeye
     </h1>
     <p>
         Y este es el parrafo de inicio y este es otro cambio
